Controller refactor to improve pageable
